--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/holiday-sangria.html">Holiday Sangria</a></li>
-        <li><a href="recipes/simple-moscow-mule.html">Simple Moscow Mule</a></li>
-        <li><a href="recipes/the-real-mojito.html">The real Mojito</a></li>
-    </ul>
+    <img src="https://cdn.dribbble.com/users/553013/screenshots/3433352/odin-wink.gif";>
+      <ul id="wrapper">
+            <li><a href="recipes/holiday-sangria.html">Holiday Sangria</a></li>
+            <li><a href="recipes/simple-moscow-mule.html">Simple Moscow Mule</a></li>
+            <li><a href="recipes/the-real-mojito.html">The real Mojito</a></li>
+        </ul> 
 </body>
 </html>
